Fix issue where book was wrong size when less than 3 books

--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ body {
 .cards {
   padding: 1rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   gap: 3rem;
 }
 
@@ -159,14 +159,14 @@ body {
 
 form {
   z-index: 1;
-  border: 2px solid rgb(199, 199, 199);
+  border: 2px solid rgb(213, 213, 213);
   border-radius: 7px;
   position: absolute;
   top: 15%;
   left: 36%;
   height: 500px;
   width: 400px;
-  background-color: rgb(199, 199, 199);
+  background-color: rgb(213, 213, 213);
   display: grid;
   grid-template-columns: 1fr;
   gap: 1rem;
@@ -188,9 +188,10 @@ label {
 
 input[type="text"],
 input[type="number"] {
+  background-color: rgb(236, 236, 236);
   width: 20rem;
   height: 2.5rem;
-  border: 2px solid white;
+  border: 2px solid rgb(236, 236, 236);
   border-radius: 7px;
   font-size: 1rem;
   padding: 0 .5rem 0 .5rem;
@@ -206,7 +207,6 @@ label[for="read"] {
     display: inline;
     font-size: 1.3rem;
 }
-
 
 input[type="checkbox"] {
    width: 35px;
